Added HTML Boilerplate lesson and assignment

--- a/html-foundation/html-boilerplate/assignment-1.html
+++ b/html-foundation/html-boilerplate/assignment-1.html
@@ -1,15 +1,13 @@
-<!-- DOCTYPE Declaration - HTML version: HTML5 -->
+// Reproduce the HTML boilerplate
 <!DOCTYPE html>
-<!-- HTML: root element of this document -->
 <html lang="eng">
-  <!-- Meta-Information -->
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My First Webpage</title>
+    <title>HTML boilerplate | Assignment</title>
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>My fisrt Webpage</h1>
   </body>
 </html>
