--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -21,5 +21,19 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Odin Recipes | Home</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar" id="home">
+      <div class="container navbar-flex">
+        <h3>Odin.Recipes</h3>
+
+        <ul class="main-menu-list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#recipes">Recipes</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
