feat: Add Hero section in Homepage

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -55,6 +55,15 @@
       </div>
     </nav>
 
+    <!-- Hero -->
+    <header class="hero">
+      <div class="container hero-content">
+        <h1>Quick Bites for Busy Minds</h1>
+        <p>Speedy meals with big flavors, made simple.</p>
+        <a href="#recipes" class="btn">Get Cooking</a>
+      </div>
+    </header>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
