feat: Add About section in homepage

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -64,6 +64,39 @@
       </div>
     </header>
 
+    <!-- About -->
+    <section id="about" class="about">
+      <div class="about-content">
+        <h3>Hey! I'm Ronnie.</h3>
+        <div class="divider-line"></div>
+        <p>
+          I'm new to web development. The Odin Recipes is a project I created to
+          learn HTML, CSS and JavaScript as part of my journey with
+          <span class="external-link"
+            ><a href="https://www.theodinproject.com/"
+              >The Odin Project.</a
+            ></span
+          >
+          The recipe images on this website are freely sourced from the
+          wonderful websites
+          <span class="external-link"
+            ><a href="https://www.pexels.com/" target="_blank">Pexels</a></span
+          >
+          and
+          <span class="external-link"
+            ><a href="https://unsplash.com/" target="_blank">Unsplash</a></span
+          >.
+        </p>
+        <p>Click below to discover more of my personal projects on Github.</p>
+        <a
+          href="https://github.com/chanronnie"
+          class="btn btn-reverse"
+          target="_blank"
+          >Explore More</a
+        >
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
