feat: Add featured recipes in homepage using grid

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -97,6 +97,78 @@
       </div>
     </section>
 
+    <!-- Recipes -->
+    <section class="container" id="recipes">
+      <h4 class="section-title">Smart Recipes</h4>
+      <div class="divider-line"></div>
+
+      <div class="recipes-grid">
+        <!-- Recipe 1 -->
+        <div class="recipe-card-item">
+          <a href="./recipes/scrambled-egg.html">
+            <div class="image-wrapper">
+              <img src="./images/scrambled-egg.jpg" alt="scrambled-egg" />
+            </div>
+            <div class="recipe-card-description">
+              <h4>Scrambled Egg</h4>
+              <p class="recipe-card-preview">
+                <i class="fa-regular fa-clock"></i> 10 minutes
+                <i class="fa-regular fa-user"></i> 2 servings
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <!-- Recipe 2 -->
+        <div class="recipe-card-item">
+          <a href="./recipes/quesadilla.html">
+            <div class="image-wrapper">
+              <img src="./images/quesadilla.jpg" alt="quesadilla" />
+            </div>
+            <div class="recipe-card-description">
+              <h4>Easy Quesadilla</h4>
+              <p class="recipe-card-preview">
+                <i class="fa-regular fa-clock"></i> 30 minutes
+                <i class="fa-regular fa-user"></i> 4 servings
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <!-- Recipe 3 -->
+        <div class="recipe-card-item">
+          <a href="./recipes/strawberry-salad.html">
+            <div class="image-wrapper">
+              <img src="./images/strawberry-salad.jpg" alt="strawberry-salad" />
+            </div>
+            <div class="recipe-card-description">
+              <h4>Summer Strawberry Salad</h4>
+              <p class="recipe-card-preview">
+                <i class="fa-regular fa-clock"></i> 25 minutes
+                <i class="fa-regular fa-user"></i> 4 servings
+              </p>
+            </div>
+          </a>
+        </div>
+
+        <!-- Recipe 4 -->
+        <div class="recipe-card-item">
+          <a href="./recipes/shakshuka.html">
+            <div class="image-wrapper">
+              <img src="./images/shakshuka.jpg" alt="shakshuka" />
+            </div>
+            <div class="recipe-card-description">
+              <h4>Simplified Shakshuka</h4>
+              <p class="recipe-card-preview">
+                <i class="fa-regular fa-clock"></i> 40 minutes
+                <i class="fa-regular fa-user"></i> 4 servings
+              </p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
