--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -169,6 +169,83 @@
       </div>
     </section>
 
+    <!-- Footer -->
+    <footer id="#contact">
+      <div class="container footer-grid">
+        <!-- Left Footer -->
+        <div class="logo">
+          <h2>Odin.Recipes</h2>
+          <p>
+            The Odin Recipes is a project I built to learn HTML, CSS, and
+            JavaScript during my journey with The Odin Project.
+          </p>
+
+          <!-- Social -->
+          <div class="social">
+            <ul class="social-icons">
+              <li>
+                <a href="https://facebook.com" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://pinterest.com" target="_blank">
+                  <i class="fa-brands fa-pinterest"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://instagram.com" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/chanronnie" target="_blank">
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div class="quick-links">
+          <h4 class="footer-title">Quick Links</h4>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#recipes">Recipes</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+
+        <!-- Newsletter -->
+        <div class="newsletter">
+          <h4 class="footer-title">Newsletter</h4>
+          <p>Subscribe to our newsletter and get smart nutritious recipes.</p>
+          <form>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Email Address"
+            />
+            <button type="submit" class="newsletter-button">Submit</button>
+          </form>
+        </div>
+
+        <!-- Copyright -->
+        <div class="copyright">
+          <p>
+            &copy; 2024 Odin Recipes - Made with
+            <i class="fa-solid fa-heart"></i> by
+            <a href="https://github.com/chanronnie" target="_blank"
+              ><strong>Ronnie Chan</strong></a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
