fix: Fix the colors for the links on the footer

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -238,8 +238,10 @@
           <p>
             &copy; 2024 Odin Recipes - Made with
             <i class="fa-solid fa-heart"></i> by
-            <a href="https://github.com/chanronnie" target="_blank"
-              ><strong>Ronnie Chan</strong></a
+            <span class="external-link"
+              ><a href="https://github.com/chanronnie" target="_blank"
+                >Ronnie Chan</a
+              ></span
             >
           </p>
         </div>
