--- a/odin-recipes/recipes/scrambled-egg.html
+++ b/odin-recipes/recipes/scrambled-egg.html
@@ -73,5 +73,37 @@
         </p>
       </div>
     </header>
+
+    <!-- Recipe -->
+    <section class="container recipe-details">
+      <!-- Ingredients -->
+      <section class="ingredients">
+        <h2>Ingredients</h2>
+        <ul>
+          <li>1 tablespoon butter</li>
+          <li>4 large eggs, beaten</li>
+          <li>¼ cup cottage cheese</li>
+          <li>1 teaspoon chopped fresh chives, or to taste (Optional)</li>
+          <li>ground black pepper to taste</li>
+        </ul>
+      </section>
+
+      <!-- Instructions -->
+      <section class="instructions">
+        <h2>Instructions</h2>
+        <ol>
+          <li>Gather all ingredients.</li>
+          <li>
+            Melt butter in a skillet over medium heat. Pour beaten eggs into the
+            skillet; let cook undisturbed until the bottom of the eggs begins to
+            firm, 1 to 2 minutes.
+          </li>
+          <li>
+            Stir cottage cheese and chives into eggs and season with black
+            pepper.
+          </li>
+        </ol>
+      </section>
+    </section>
   </body>
 </html>
