feat: Add tag recipe section in Scramble Egg page

--- a/odin-recipes/recipes/scrambled-egg.html
+++ b/odin-recipes/recipes/scrambled-egg.html
@@ -105,5 +105,17 @@
         </ol>
       </section>
     </section>
+
+    <!-- Tag Recipe -->
+    <section class="container container-sm tag-recipe">
+      <i class="fa-brands fa-instagram fa-2x"></i>
+      <div class="tag-content">
+        <h2>Did you make this recipe?</h2>
+        <p>
+          Tag <strong>@odinrecipes</strong> on Instagram so we can admire your
+          masterpiece!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
