feat: Add comment section in Scrambled Egg page

--- a/odin-recipes/recipes/scrambled-egg.html
+++ b/odin-recipes/recipes/scrambled-egg.html
@@ -117,5 +117,38 @@
         </p>
       </div>
     </section>
+
+    <!-- Comment -->
+    <section class="container container-sm comment">
+      <div class="comment-body">
+        <h2>Leave a comment</h2>
+        <p>
+          I love hearing from you! Submit your question or review below. Your
+          email address will not be published. Required fields are marked*.
+        </p>
+        <form>
+          <textarea
+            name="comment"
+            id="comment"
+            placeholder="Enter your comment!"
+          ></textarea>
+          <div class="comment-inputs">
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Enter your name*"
+            />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter your email*"
+            />
+          </div>
+          <button type="submit" class="btn btn-reverse">Post Comment</button>
+        </form>
+      </div>
+    </section>
   </body>
 </html>
