--- a/odin-recipes/recipes/shakshuka.html
+++ b/odin-recipes/recipes/shakshuka.html
@@ -31,10 +31,10 @@
         <!-- Desktop Menu -->
         <div class="main-menu">
           <ul class="main-menu-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#recipes">Recipes</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#about">About</a></li>
+            <li><a href="../index.html#recipes">Recipes</a></li>
+            <li><a href="../index.html#contact">Contact</a></li>
           </ul>
         </div>
 
@@ -46,10 +46,10 @@
           </div>
           <div class="mobile-menu-items" id="mobile-menu-items">
             <ul class="mobile-menu-list">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#recipes">Recipes</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="../index.html#about">About</a></li>
+              <li><a href="../index.html#recipes">Recipes</a></li>
+              <li><a href="../index.html#contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -218,10 +218,10 @@
         <div class="quick-links">
           <h4 class="footer-title">Quick Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#recipes">Recipes</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html#about">About</a></li>
+            <li><a href="../index.html#recipes">Recipes</a></li>
+            <li><a href="../index.html#contact">Contact</a></li>
           </ul>
         </div>
 
@@ -255,6 +255,6 @@
       </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
