--- a/odin-recipes/recipes/quesadilla.html
+++ b/odin-recipes/recipes/quesadilla.html
@@ -252,6 +252,6 @@
       </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
