fix: Insert the required attribute in the required fields marked by *

--- a/odin-recipes/recipes/quesadilla.html
+++ b/odin-recipes/recipes/quesadilla.html
@@ -136,7 +136,8 @@
           <textarea
             name="comment"
             id="comment"
-            placeholder="Enter your comment!"
+            placeholder="Enter your comment!*"
+            required
           ></textarea>
           <div class="comment-inputs">
             <input
@@ -144,12 +145,14 @@
               name="name"
               id="name"
               placeholder="Enter your name*"
+              required
             />
             <input
               type="email"
               name="email"
               id="email"
               placeholder="Enter your email*"
+              required
             />
           </div>
           <button type="submit" class="btn btn-reverse">Post Comment</button>
