--- a/odin-recipes/recipes/shakshuka.html
+++ b/odin-recipes/recipes/shakshuka.html
@@ -144,7 +144,8 @@
           <textarea
             name="comment"
             id="comment"
-            placeholder="Enter your comment!"
+            placeholder="Enter your comment!*"
+            required
           ></textarea>
           <div class="comment-inputs">
             <input
@@ -152,12 +153,14 @@
               name="name"
               id="name"
               placeholder="Enter your name*"
+              required
             />
             <input
               type="email"
               name="email"
               id="email"
               placeholder="Enter your email*"
+              required
             />
           </div>
           <button type="submit" class="btn btn-reverse">Post Comment</button>
