--- a/the-odin-project-lectures/02-css-exercises/01-foundations/01-css-methods/index.html
+++ b/the-odin-project-lectures/02-css-exercises/01-foundations/01-css-methods/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Methods for Adding CSS</title>
 
+    <!-- Internal CSS -->
     <style>
       p {
         background-color: green;
@@ -19,6 +20,8 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
+
+    <!-- Inline CSS -->
     <button style="background-color: orange; font-size: 18px">
       Inline Method
     </button>
