feat: Add figcaption under image for credits and wrap in figure element for better semantics

--- a/odin-recipes/recipes/quesadilla.html
+++ b/odin-recipes/recipes/quesadilla.html
@@ -60,12 +60,23 @@
 
     <!-- Header -->
     <header class="container hero-recipe">
-      <div class="hero-header">
-        <h1>Easy Quesadilla</h1>
-      </div>
-      <div class="hero-image">
-        <img src="../images/quesadilla.jpg" alt="quesadilla" />
-      </div>
+      <h1 class="hero-header">Easy Quesadilla</h1>
+
+      <!-- <div class="hero-image"> -->
+      <figure class="hero-figure">
+        <img
+          src="../images/quesadilla.jpg"
+          alt="Quesadilla - Photo by Geraud Pfeiffer on Pexels"
+        />
+        <figcaption>
+          Photo by
+          <a href="https://www.pexels.com/@geraud-pfeiffer/" target="_blank"
+            >Geraud Pfeiffer</a
+          >
+          on Pexels
+        </figcaption>
+      </figure>
+      <!-- </div> -->
       <div class="preview">
         <p>
           <i class="fa-regular fa-user"></i> 4 Servings
