--- a/odin-recipes/recipes/scrambled-egg.html
+++ b/odin-recipes/recipes/scrambled-egg.html
@@ -60,12 +60,20 @@
 
     <!-- Header -->
     <header class="container hero-recipe">
-      <div class="hero-header">
-        <h1>Scrambled Egg</h1>
-      </div>
-      <div class="hero-image">
-        <img src="../images/scrambled-egg.jpg" alt="scrambled-egg" />
-      </div>
+      <h1 class="hero-header">Scrambled Egg</h1>
+      <figure class="hero-figure">
+        <img
+          src="../images/scrambled-egg.jpg"
+          alt="Scrambled Egg - Photo by Karly Gomez on Unsplash"
+        />
+        <figcaption>
+          Photo by
+          <a href="https://unsplash.com/@karlygomez" target="_blank"
+            >Karly Gomez</a
+          >
+          on Unsplash
+        </figcaption>
+      </figure>
       <div class="preview">
         <p>
           <i class="fa-regular fa-user"></i> 2 Servings
