--- a/odin-recipes/recipes/shakshuka.html
+++ b/odin-recipes/recipes/shakshuka.html
@@ -60,12 +60,22 @@
 
     <!-- Header -->
     <header class="container hero-recipe">
-      <div class="hero-header">
-        <h1>Simplified Shakshuka</h1>
-      </div>
-      <div class="hero-image">
-        <img src="../images/shakshuka.jpg" alt="shakshuka" />
-      </div>
+      <h1 class="hero-header">Simplified Shakshuka</h1>
+      <figure class="hero-figure">
+        <img
+          src="../images/shakshuka.jpg"
+          alt="Shakshuka - Photo by Julia Khalimova on Pexels"
+        />
+        <figcaption>
+          Photo by
+          <a
+            href="https://www.pexels.com/@julia-khalimova-826746/"
+            target="_blank"
+            >Julia Khalimova</a
+          >
+          on Pexels
+        </figcaption>
+      </figure>
       <div class="preview">
         <p>
           <i class="fa-regular fa-user"></i> 4 Servings
