--- a/odin-recipes/recipes/strawberry-salad.html
+++ b/odin-recipes/recipes/strawberry-salad.html
@@ -60,12 +60,21 @@
 
     <!-- Header -->
     <header class="container hero-recipe">
-      <div class="hero-header">
-        <h1>Summer Strawberry Salad</h1>
-      </div>
-      <div class="hero-image">
-        <img src="../images/strawberry-salad.jpg" alt="strawberry-salad" />
-      </div>
+      <h1 class="hero-header">Summer Strawberry Salad</h1>
+
+      <figure class="hero-figure">
+        <img
+          src="../images/strawberry-salad.jpg"
+          alt="Strawberry Salad - Photo by Dovile Ramoskaite on Unsplash"
+        />
+        <figcaption>
+          Photo by
+          <a href="https://unsplash.com/@dovilerm" target="_blank"
+            >Dovile Ramoskaite</a
+          >
+          on Unsplash
+        </figcaption>
+      </figure>
       <div class="preview">
         <p>
           <i class="fa-regular fa-user"></i> 4 Servings
