feat: Wrap all images in figure elements for better semantics and add image credits

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -106,9 +106,12 @@
         <!-- Recipe 1 -->
         <div class="recipe-card-item">
           <a href="./recipes/scrambled-egg.html">
-            <div class="image-wrapper">
-              <img src="./images/scrambled-egg.jpg" alt="scrambled-egg" />
-            </div>
+            <figure class="image-wrapper">
+              <img
+                src="./images/scrambled-egg.jpg"
+                alt="Scrambled Egg - Photo by Karly Gomez on Unsplash"
+              />
+            </figure>
             <div class="recipe-card-description">
               <h4>Scrambled Egg</h4>
               <p class="recipe-card-preview">
@@ -122,9 +125,12 @@
         <!-- Recipe 2 -->
         <div class="recipe-card-item">
           <a href="./recipes/quesadilla.html">
-            <div class="image-wrapper">
-              <img src="./images/quesadilla.jpg" alt="quesadilla" />
-            </div>
+            <figure class="image-wrapper">
+              <img
+                src="./images/quesadilla.jpg"
+                alt="Quesadilla - Photo by Geraud Pfeiffer on Pexels"
+              />
+            </figure>
             <div class="recipe-card-description">
               <h4>Easy Quesadilla</h4>
               <p class="recipe-card-preview">
@@ -138,9 +144,12 @@
         <!-- Recipe 3 -->
         <div class="recipe-card-item">
           <a href="./recipes/strawberry-salad.html">
-            <div class="image-wrapper">
-              <img src="./images/strawberry-salad.jpg" alt="strawberry-salad" />
-            </div>
+            <figure class="image-wrapper">
+              <img
+                src="./images/strawberry-salad.jpg"
+                alt="Strawberry Salad - Photo by Dovile Ramoskaite on Unsplash"
+              />
+            </figure>
             <div class="recipe-card-description">
               <h4>Summer Strawberry Salad</h4>
               <p class="recipe-card-preview">
@@ -154,9 +163,12 @@
         <!-- Recipe 4 -->
         <div class="recipe-card-item">
           <a href="./recipes/shakshuka.html">
-            <div class="image-wrapper">
-              <img src="./images/shakshuka.jpg" alt="shakshuka" />
-            </div>
+            <figure class="image-wrapper">
+              <img
+                src="./images/shakshuka.jpg"
+                alt="Shakshuka - Photo by Julia Khalimova on Pexels"
+              />
+            </figure>
             <div class="recipe-card-description">
               <h4>Simplified Shakshuka</h4>
               <p class="recipe-card-preview">
