--- a/the-odin-project-lectures/02-css-exercises/03-flex/02-flex-header/index.html
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/02-flex-header/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flex Header</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
+      <!-- Left Links -->
       <div class="left-links">
         <ul>
           <li><a href="#">ONE</a></li>
@@ -16,7 +17,11 @@
           <li><a href="#">THREE</a></li>
         </ul>
       </div>
+
+      <!-- Logo -->
       <div class="logo">LOGO</div>
+
+      <!-- Right Links -->
       <div class="right-links">
         <ul>
           <li><a href="#">FOUR</a></li>
