--- a/the-odin-project-lectures/02-css-exercises/03-flex/04-flex-information/index.html
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/04-flex-information/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Information</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="title">Information!</div>
+    <!-- Title -->
+    <header class="title">Information!</header>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+    <!-- Flex Container -->
+    <section class="flex-container">
+      <!-- Item 1 -->
+      <div class="flex-item">
+        <img src="./images/barberry.png" alt="barberry" />
+        <div class="text">This is a type of plant. We love this one.</div>
+      </div>
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice?</div>
+      <!-- Item 2 -->
+      <div class="flex-item">
+        <img src="./images/chilli.png" alt="chili" />
+        <div class="text">This is another type of plant. Isn't it nice?</div>
+      </div>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
+      <!-- Item 3 -->
+      <div class="flex-item">
+        <img src="./images/pepper.png" alt="pepper" />
+        <div class="text">We have so many plants. Yay plants.</div>
+      </div>
 
-    <img src="./images/saffron.png" alt="saffron">
-    <div class="text">I'm running out of things to say about plants.</div>
+      <!-- Item 4 -->
+      <div class="flex-item">
+        <img src="./images/saffron.png" alt="saffron" />
+        <div class="text">I'm running out of things to say about plants.</div>
+      </div>
+    </section>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+      <div>
+        Icons made by
+        <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26"
+          >Icongeek26</a
+        >
+        from
+        <a href="https://www.flaticon.com/" title="Flaticon"
+          >www.flaticon.com</a
+        >
+      </div>
     </div>
   </body>
 </html>
