--- a/the-odin-project-lectures/02-css-exercises/03-flex/07-flex-layout-2/index.html
+++ b/the-odin-project-lectures/02-css-exercises/03-flex/07-flex-layout-2/index.html
@@ -11,61 +11,64 @@
   <body>
     <header class="header">MY AWESOME WEBSITE</header>
 
-    <aside class="sidebar">
-      <ul>
-        <li><a href="#">⭐ - link one</a></li>
-        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-        <li><a href="#">🖌️ - link three</a></li>
-        <li><a href="#">👌🏽 - link four</a></li>
-      </ul>
-    </aside>
+    <main class="content">
+      <aside class="sidebar">
+        <ul>
+          <li><a href="#">⭐ - link one</a></li>
+          <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+          <li><a href="#">🖌️ - link three</a></li>
+          <li><a href="#">👌🏽 - link four</a></li>
+        </ul>
+      </aside>
 
-    <section class="flex-cards">
-      <!-- Card 1 -->
-      <div class="card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
-        eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla
-        repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti
-        veritatis minima porro?
-      </div>
+      <section class="flex-cards">
+        <!-- Card 1 -->
+        <div class="card">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora,
+          eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla
+          repudiandae vitae provident quae, obcaecati ipsam unde impedit
+          corrupti veritatis minima porro?
+        </div>
 
-      <!-- Card 2 -->
-      <div class="card">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat
-        qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit
-        alias vero rem, corporis officia totam saepe excepturi odit ea.
-      </div>
+        <!-- Card 2 -->
+        <div class="card">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi
+          quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga
+          suscipit alias vero rem, corporis officia totam saepe excepturi odit
+          ea.
+        </div>
 
-      <!-- Card 3 -->
-      <div class="card">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex
-        quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla.
-        Laudantium optio accusantium quaerat fugiat, natus officia esse autem?
-      </div>
+        <!-- Card 3 -->
+        <div class="card">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo
+          ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla.
+          Laudantium optio accusantium quaerat fugiat, natus officia esse autem?
+        </div>
 
-      <!-- Card 4 -->
-      <div class="card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-        nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi
-        corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima
-        laboriosam eos!
-      </div>
+        <!-- Card 4 -->
+        <div class="card">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum
+          sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde
+          earum minima laboriosam eos!
+        </div>
 
-      <!-- Card 5 -->
-      <div class="card">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex
-        quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla.
-        Laudantium optio accusantium quaerat fugiat, natus officia esse autem?
-      </div>
+        <!-- Card 5 -->
+        <div class="card">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo
+          ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla.
+          Laudantium optio accusantium quaerat fugiat, natus officia esse autem?
+        </div>
 
-      <!-- Card 6 -->
-      <div class="card">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-        nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi
-        corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima
-        laboriosam eos!
-      </div>
-    </section>
+        <!-- Card 6 -->
+        <div class="card">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum
+          sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde
+          earum minima laboriosam eos!
+        </div>
+      </section>
+    </main>
 
     <footer class="footer">The Odin Project ❤️</footer>
   </body>
