--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -23,5 +23,40 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>EchoWave</title>
   </head>
-  <body></body>
+  <body>
+    <header class="navbar container">
+      <nav class="navbar-flex">
+        <!-- Left -->
+        <h3 class="logo">EchoWave</h3>
+
+        <!-- Right -->
+        <!-- Desktop Navbar-->
+        <div class="main-menu">
+          <ul class="main-menu-list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#episodes">Episodes</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#" class="btn btn-nav">Log in</a></li>
+          </ul>
+        </div>
+
+        <!-- Mobile Navbar -->
+        <div class="mobile-menu">
+          <div class="mobile-menu-toggle">
+            <i class="fa-solid fa-bars fa-2x"></i>
+          </div>
+          <div class="mobile-menu-items">
+            <ul class="mobile-menu-list">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Episodes</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#" class="btn btn-nav">Log in</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <script src="./js/script.js"></script>
+  </body>
 </html>
