feat: Add hero section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -57,6 +57,25 @@
       </nav>
     </header>
 
+    <!-- Hero -->
+    <section class="hero" id="hero">
+      <div class="hero-text container">
+        <h1>Laugh Tracks & Coffee</h1>
+        <p>
+          Join us for a caffeinated journey through the hilarious and absurd
+          moments of everyday life. From workspace shenanigans to the trials of
+          adulting. "Laugh Tracks & Coffee" serves up a generous dose of
+          laughter to kickstart your day. Hosted by comedians Jack & Jones.
+        </p>
+        <div>
+          <a href="#" class="btn"
+            ><i class="fa-solid fa-play"></i> Listen Now</a
+          >
+          <a href="#episodes" class="btn btn-light">All Episodes</a>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
