feat: Add latest episodes section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -76,6 +76,97 @@
       </div>
     </section>
 
+    <!-- Episodes -->
+    <section class="episodes container" id="episodes">
+      <h2 class="section-title">Latest Episodes</h2>
+      <div class="cards-grid">
+        <!-- Card Item 1 -->
+        <div class="card-item">
+          <a href="#episodes">
+            <figure class="card-figure">
+              <img
+                src="./images/podcaster-1.jpg"
+                alt="Podcast Host - Photo by 
+            Emmanuel Ikwuegbu on Unsplash"
+              />
+              <figcaption>
+                <p>S1 Ep21 | Happy Sneeze</p>
+                <p>Record something for the podcast.</p>
+                <p class="play-button">
+                  <i class="fa-regular fa-circle-play"></i> Listen Now
+                </p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <!-- Card Item 2 -->
+        <div class="card-item">
+          <a href="#episodes">
+            <figure class="card-figure">
+              <img
+                src="./images/podcaster-2.jpg"
+                alt="Podcast Host - Photo by 
+              Marty O'Neill on Unsplash"
+              />
+              <figcaption>
+                <p>S1 Ep20 | Morning Snooze</p>
+                <p>Record something for the podcast.</p>
+                <p class="play-button">
+                  <i class="fa-regular fa-circle-play"></i> Listen Now
+                </p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <!-- Card Item 3 -->
+        <div class="card-item">
+          <a href="#episodes">
+            <figure class="card-figure">
+              <img
+                src="./images/podcaster-3.jpg"
+                alt="Podcast Host - Photo by 
+              Cottonbro Studio on Unsplash"
+              />
+              <figcaption>
+                <p>S1 Ep19 | What is that?</p>
+                <p>Record something for the podcast.</p>
+                <p class="play-button">
+                  <i class="fa-regular fa-circle-play"></i> Listen Now
+                </p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+
+        <!-- Card Item 4 -->
+        <div class="card-item">
+          <a href="#episodes">
+            <figure class="card-figure">
+              <img
+                src="./images/podcaster-4.jpg"
+                alt="odcast Host - Photo by 
+              Marty O'Neill on Unsplash"
+              />
+              <figcaption>
+                <p>S1 Ep18 | Morning Sleep</p>
+                <p>Record something for the podcast.</p>
+                <p class="play-button">
+                  <i class="fa-regular fa-circle-play"></i> Listen Now
+                </p>
+              </figcaption>
+            </figure>
+          </a>
+        </div>
+      </div>
+
+      <!-- Button -->
+      <div>
+        <a href="#" class="btn">Load More</a>
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
