feat: Add testimonials section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -167,6 +167,58 @@
       </div>
     </section>
 
+    <!-- Testimonials -->
+    <section class="testimonials">
+      <div class="container">
+        <h2 class="section-title">What our beloved listeners said</h2>
+        <div class="testimonials-grid">
+          <!-- Grid Item 1 -->
+          <div class="grid-item">
+            <div class="review">
+              <p class="quotation">
+                <i class="fa-solid fa-quote-left"></i> ____
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur, dolorum.
+              </p>
+            </div>
+            <p><strong>John Doe</strong></p>
+          </div>
+
+          <!-- Grid Item 2 -->
+          <div class="grid-item">
+            <div class="review">
+              <p class="quotation">
+                <i class="fa-solid fa-quote-left"></i> ____
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur, dolorum. Lorem ipsum dolor sit amet.
+              </p>
+            </div>
+            <p><strong>Micheal Doe</strong></p>
+          </div>
+
+          <!-- Grid Item 3 -->
+          <div class="grid-item">
+            <div class="review">
+              <p class="quotation">
+                <i class="fa-solid fa-quote-left"></i> ____
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Consectetur, dolorum.
+              </p>
+            </div>
+            <p>
+              <strong>Jessica Smith</strong>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
