feat: Add newsletter section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -219,6 +219,25 @@
       </div>
     </section>
 
+    <!-- Newsletter -->
+    <section class="newsletter container container-sm">
+      <h2 class="section-title">New Episodes Every Week</h2>
+      <p>
+        Join the community and get notified everytime we post a new episode.
+      </p>
+      <p>Immerse yourself in a world of captivating podcasts!</p>
+      <form>
+        <input
+          type="text"
+          name="email"
+          id="email"
+          placeholder="Enter Email"
+          required
+        />
+        <button type="submit" class="btn">Subscribe</button>
+      </form>
+    </section>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
