feat: Add footer section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -238,6 +238,91 @@
       </form>
     </section>
 
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container footer-grid">
+        <!-- Logo -->
+        <div class="footer-logo">
+          <h4>EchoWave</h4>
+          <p>
+            EchoWave is your destination for captivating podcasts that resonate
+            with curiosity and knowledge. Dive into a sea of insightful
+            conversations, where every episode creates ripples of inspirations.
+          </p>
+
+          <!-- Social -->
+          <div class="social">
+            <ul class="social-icons">
+              <li>
+                <a href="https://facebook.com" target="_blank">
+                  <i class="fa-brands fa-facebook"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://pinterest.com" target="_blank">
+                  <i class="fa-brands fa-pinterest"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://instagram.com" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://chanronnie.github.io/the_odin_project/landing-page/"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Quick Links -->
+        <div class="quick-licks">
+          <h4 class="footer-title">Quick Links</h4>
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="">Episodes</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="">About</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Contact -->
+        <div class="contact">
+          <h4 class="footer-title">Contact</h4>
+          <p>3195 NW 25th St, Floria USA</p>
+          <p>contact@echowave.com</p>
+          <p>305-905-8099</p>
+        </div>
+
+        <!-- Copyright -->
+        <div class="copyright">
+          <p>
+            &copy; 2024 EchoWave - Made with
+            <i class="fa-solid fa-heart"></i> by
+            <a
+              href="https://chanronnie.github.io/the_odin_project/landing-page/"
+              target="_blank"
+              ><strong>Ronnie Chan</strong></a
+            >
+          </p>
+        </div>
+      </div>
+    </footer>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
