fix: Correct Github links in footer section

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -270,7 +270,7 @@
               </li>
               <li>
                 <a
-                  href="https://chanronnie.github.io/the_odin_project/landing-page/"
+                  href="https://github.com/chanronnie/the_odin_project/tree/main/landing-page"
                   target="_blank"
                 >
                   <i class="fa-brands fa-github"></i>
@@ -314,7 +314,7 @@
             &copy; 2024 EchoWave - Made with
             <i class="fa-solid fa-heart"></i> by
             <a
-              href="https://chanronnie.github.io/the_odin_project/landing-page/"
+              href="https://github.com/chanronnie/the_odin_project/tree/main/landing-page"
               target="_blank"
               ><strong>Ronnie Chan</strong></a
             >
