feat: Add a board to display the clickable moves and the current round outcome

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -48,6 +48,44 @@
           <div class="game-winner hidden">Game Winner!</div>
         </section>
       </section>
+
+      <!-- Board -->
+      <section class="board">
+        <!-- Round Game Details -->
+        <section class="round-board">
+          <p class="round-outcome">Choose your move</p>
+          <p class="round-result">.</p>
+        </section>
+
+        <!-- Move Options-->
+        <section class="moves">
+          <div class="moves-flex">
+            <!-- Rock -->
+            <button class="btn btn-rock">
+              <figure>
+                <img src="./images/btn-rock.svg" alt="rock" />
+                <figcaption>Rock</figcaption>
+              </figure>
+            </button>
+
+            <!-- Paper -->
+            <button class="btn btn-paper">
+              <figure>
+                <img src="./images/btn-paper.svg" alt="paper" />
+                <figcaption>Paper</figcaption>
+              </figure>
+            </button>
+
+            <!-- Scissors -->
+            <button class="btn btn-scissors">
+              <figure>
+                <img src="./images/btn-scissors.svg" alt="scissors" />
+                <figcaption>Scissors</figcaption>
+              </figure>
+            </button>
+          </div>
+        </section>
+      </section>
     </main>
     <!-- JavaScript script -->
     <script src="./js/script.js"></script>
