feat: Add a reset button

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -54,7 +54,7 @@
         <!-- Round Game Details -->
         <section class="round-board">
           <p class="round-outcome">Choose your move</p>
-          <p class="round-result">.</p>
+          <p class="round-result">...</p>
         </section>
 
         <!-- Move Options-->
@@ -87,6 +87,9 @@
         </section>
       </section>
     </main>
+
+    <!-- Reset button -->
+    <button class="btn btn-reset"><i class="fa-solid fa-rotate-right fa-flip-horizontal"></i> Reset</button>
     <!-- JavaScript script -->
     <script src="./js/script.js"></script>
   </body>
