feat: Add a footer

--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -90,6 +90,13 @@
 
     <!-- Reset button -->
     <button class="btn btn-reset"><i class="fa-solid fa-rotate-right fa-flip-horizontal"></i> Reset</button>
+
+    <!-- Footer -->
+    <footer>
+      <p>
+        Made by <a href="https://github.com/chanronnie/rock-paper-scissors/tree/main" target="_blank">Ronnie Chan <i class="fa-brands fa-github"></i></a>
+      </p>
+    </footer>
     <!-- JavaScript script -->
     <script src="./js/script.js"></script>
   </body>
