fix: Fix elements layout in media queries

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -19,7 +19,7 @@
   <body>
     <main class="calculator">
       <!-- GitHub Link -->
-      <div>
+      <div class="github-link">
         <a
           href="https://github.com/chanronnie/the-odin-project/tree/main/calculator"
           target="_blank"
