refactor: Format code for readability and fix typos

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
-
+    <meta name="keywords" content="HTML, CSS, JavaScript, calculator, the odin project, beginner project" />
+    <meta name="author" content="Ronnie Chan" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -20,11 +21,7 @@
     <main class="calculator">
       <!-- GitHub Link -->
       <div class="github-link">
-        <a
-          href="https://github.com/chanronnie/the-odin-project/tree/main/calculator"
-          target="_blank"
-          ><i class="fa-brands fa-github"></i> Ronnie Chan</a
-        >
+        <a href="https://github.com/chanronnie/the-odin-project/tree/main/calculator" target="_blank"><i class="fa-brands fa-github"></i> Ronnie Chan</a>
       </div>
 
       <!-- Display -->
